@startuml PropertyTile
title PropertyTile

skinparam classAttributeIconSize 0
skinparam classFontSize 13
skinparam classFontStyle Bold
skinparam classAttributeFontSize 12

abstract class PropertyTile {
    # property : Property*
    --
    + getProperty() : Property*
    + getCategory() : TileCategory
    + getDisplayLabel() : string
    + {abstract} onLanded(player : Player&, game : Game&) : void
}

class StreetTile {
    --
    + onLanded(player : Player&, game : Game&) : void
}

class RailroadTile {
    --
    + onLanded(player : Player&, game : Game&) : void
}

class UtilityTile {
    --
    + onLanded(player : Player&, game : Game&) : void
}

PropertyTile <|-- StreetTile
PropertyTile <|-- RailroadTile
PropertyTile <|-- UtilityTile

@enduml
